Fix memory parameters